Bug 1094466 - Separate scroll-panels for similar jobs panel This patch gets rid of overflowing for the bottom header and propagates down the content heights in a way, that the plugins can have proper scroll panes. If we wouldn't explicitly inherit the height, it'd get calculated by its children, and therefore the scroll pane would overflow. The change to pluginpanel.html is needed because otherwise we would have multiple div's with a explicitly set height, although their contents are display:none.

--- a/ui/css/treeherder.css
+++ b/ui/css/treeherder.css
@@ -649,8 +649,7 @@ div#bottom-panel .navbar.navbar-dark .navbar-nav > li.active a:focus {
            flex-flow: row;
 }
 
-#bottom-left-panel, #bottom-center-panel{
-    overflow-y: auto;
+#bottom-left-panel, #bottom-center-panel {
     background-color: #FCFCFC;
     display: -webkit-flex;
     display:         flex;
@@ -668,7 +667,6 @@ div#bottom-panel .navbar.navbar-dark .navbar-nav > li.active a:focus {
 
 #bottom-left-panel {
     width:260px;
-    overflow-y: auto;
 }
 
 #bottom-left-bottom > ul {
@@ -701,7 +699,7 @@ div#bottom-panel .navbar.navbar-dark .navbar-nav > li.active a:focus {
 
 #bottom-left-panel .printlines{padding-bottom: 5px;}
 
-#bottom-left-bottom, #bottom-center-bottom {
+#bottom-left-bottom {
     overflow: auto;
 }
 
@@ -717,14 +715,26 @@ div#bottom-panel .navbar.navbar-dark .navbar-nav > li.active a:focus {
     border-top: none;
 }
 
-#bottom-center-panel  ul.failure-summary-list{
+#bottom-center-bottom {
+    max-height: calc(100% - 33px);
+}
+
+#bottom-center-bottom > * {
+    height: 100%;
+}
+
+#bottom-center-bottom > * > * > * {
+    height: 100%;
+}
+
+#bottom-center-panel ul.failure-summary-list{
     padding-left: 0px;
-    height:100%;
+    height: 100%;
     overflow: auto;
 }
 
 ul.failure-summary-list li {
-    padding: 0px 0px 0px 2px;
+    padding-left: 2px;
     font-size: 11px;
     background: #ccfaff;
 }
@@ -1008,7 +1018,7 @@ ul.failure-summary-list li .btn-xs {
 }
 
 .annotations-panel {
-    overflow: scroll;
+    overflow: auto;
     margin-right: 0;
 }
 
@@ -1760,16 +1770,15 @@ fieldset[disabled] .btn-repo.active {
            flex-flow: row;
 }
 
-div.similar_jobs .right_panel{ border: 1px solid #101010; flex: 1 1; -webkit-flex: 1 1; }
-div.similar_jobs .right_panel form{height:42px; background-color: #D3D3D3;}
+div.similar_jobs .right_panel{ overflow-y: auto; flex: 1 1; -webkit-flex: 1 1; }
+div.similar_jobs .right_panel form{ height:36px; background-color: #D3D3D3;}
 div.similar_jobs .right_panel .similar_job_detail{ border-top: 1px solid #101010; }
 div.similar_jobs .right_panel .similar_job_detail table { width: 100%; overflow: hidden; }
 
-div.similar_jobs .left_panel{ margin-bottom: 15px; flex: 1 1; -webkit-flex: 1 1; }
-div.similar_jobs .left_panel table{ margin-bottom: 5px;}
-div.similar_jobs .left_panel table tr.active>td{background-color: #D3D3D3;}
-div.similar_jobs .left_panel table tr{cursor: pointer;}
-
+div.similar_jobs .left_panel{ overflow-y: auto; flex: 1 1; -webkit-flex: 1 1; }
+div.similar_jobs .left_panel table{ margin-bottom: 7px;}
+div.similar_jobs .left_panel table tr.active>td{ background-color: #D3D3D3; }
+div.similar_jobs .left_panel table tr{ cursor: pointer; }
 
 #notification_box{
     position:fixed;
